# package-doctor

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/: package-doctor.md
scripts/: build_graph.py
src/package_doctor/: conflict_analyzer.py  store.py
src/package_doctor/collectors/: model_checker.py  pypi.py
src/package_doctor/graph/: extractor.py  indexer.py  mcp_tool.py  query.py  schema.py
src/package_doctor/mcp_server/: __init__.py
src/package_doctor/models/: __init__.py
tests/: test_core.py  test_graph.py
