[project]
name = "package-doctor"
version = "0.1.0"
description = "Package Doctor — MCP server preventing use of deprecated/conflicting packages and stale LLM models"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.27.2",
    "pydantic>=2.10.1,<3.0.0",
    "mcp==1.2.0",
    "packaging==24.1",
    "python-dateutil==2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.30.0",
    "respx==0.21.1",
    "ruff==0.4.7",
]
graph = [
    "kuzu>=0.11.0",
    "anthropic>=0.30.0",
]

[project.scripts]
package-doctor-mcp = "package_doctor.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/package_doctor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
